spacing bw error msg issue, ompany highlight 2 column fix

--- a/node-app/src/views/core/components/content/container/style.scss
+++ b/node-app/src/views/core/components/content/container/style.scss
@@ -777,6 +777,7 @@ ul {
         text-align: center;
         background-color: $white-shade;
         height: 100%;
+        width: 100%;
         img {
             width: 150px !important;
             height: 150px;
